--- a/app/src/main/res/layout/activity_confirmarsimulacion.xml
+++ b/app/src/main/res/layout/activity_confirmarsimulacion.xml
@@ -73,7 +73,6 @@
         android:paddingHorizontal="60dp"
         android:paddingVertical="10dp"
         android:textColor="@color/white"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,13 +114,14 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/pregunta_iniciar_simulacion"
         android:textSize="50sp"
         android:gravity="center"
+        android:textAlignment="center"
         android:textColor="@color/black"
-
+        android:layout_marginHorizontal="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
