--- a/app/src/main/res/layout/activity_confirmarpractica.xml
+++ b/app/src/main/res/layout/activity_confirmarpractica.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ResultadosSimulacion"
+    tools:context=".confirmar_practica"
     android:background="@color/purple_200"
     >
 
