--- a/app/src/main/res/layout/activity_frame_10.xml
+++ b/app/src/main/res/layout/activity_frame_10.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ResultadosSimulacion"
+    tools:context=".frame_10"
     android:background="@color/purple_200"
     >
 
