--- a/app/src/main/res/layout/activity_confirmarpractica.xml
+++ b/app/src/main/res/layout/activity_confirmarpractica.xml
@@ -97,27 +97,27 @@
 
 
         <Button
-            android:id="@+id/button2"
-            android:layout_marginHorizontal="110dp"
+            android:id="@+id/cplisto_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#004242"
-            android:text="@string/btn_listo"
-            android:textSize="25sp"
-            android:paddingHorizontal="60dp"
-            android:textColor="@color/white"
+            android:layout_marginHorizontal="110dp"
             android:layout_marginBottom="40dp"
+            android:backgroundTint="#004242"
+            android:paddingHorizontal="60dp"
+            android:text="@string/btn_listo"
+            android:textColor="@color/white"
+            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/cpatras_btn"
             app:layout_constraintVertical_bias="0.116"
 
             />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/cpatras_btn"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:layout_marginHorizontal="110dp"
