--- a/app/src/main/res/layout/activity_frame_10.xml
+++ b/app/src/main/res/layout/activity_frame_10.xml
@@ -142,12 +142,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button2"
+            app:layout_constraintTop_toBottomOf="@+id/cplisto_btn"
             app:layout_constraintVertical_bias="0.229"
             />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/cplisto_btn"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="20dp"
             android:layout_height="wrap_content"
@@ -163,12 +163,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/cpatras_btn"
             app:layout_constraintVertical_bias="0.116"
             />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/cpatras_btn"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="20dp"
             android:layout_height="wrap_content"
