--- a/app/src/main/res/layout/activity_frame_crearcuenta.xml
+++ b/app/src/main/res/layout/activity_frame_crearcuenta.xml
@@ -133,7 +133,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button2"
+            app:layout_constraintTop_toBottomOf="@+id/cplisto_btn"
             app:layout_constraintVertical_bias="0.229"
             />
 </LinearLayout>
