--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
         android:layout_marginTop="13dp"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:srcCompat="@drawable/Practica"
-        tools:layout_editor_absoluteX="47dp" />
+        tools:layout_editor_absoluteX="47dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
