--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:srcCompat="@drawable/Examen" />
+        app:srcCompat="@drawable/examen" />
 
     <TextView
         android:id="@+id/textView9"
@@ -86,7 +86,7 @@
         android:layout_marginLeft="7dp"
         android:layout_marginTop="13dp"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:srcCompat="@drawable/Practica"
+        app:srcCompat="@drawable/practica"
         tools:layout_editor_absoluteX="47dp"
         />
 
