Autenticacion Usuario Terminado

--- a/app/src/main/res/layout/activity_frame_10.xml
+++ b/app/src/main/res/layout/activity_frame_10.xml
@@ -126,7 +126,7 @@
             />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnRegistrar"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="20dp"
             android:layout_height="wrap_content"
