--- a/app/src/main/res/layout/activity_frame_5.xml
+++ b/app/src/main/res/layout/activity_frame_5.xml
@@ -81,7 +81,7 @@
         app:layout_constraintVertical_bias="0.604" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnRegistrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
