--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,114 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".LoginActivity">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:onClick="forgotpassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="¿Olvido su contraseña?"
-        android:textColor="@color/verde_oscuro"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.535"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
-        app:layout_constraintVertical_bias="0.476" />
 
     <EditText
         android:id="@+id/txtUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginHorizontal="78dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="@string/user"
         android:inputType="textPersonName"
         android:text=""
-        android:textSize="28dp"
+        android:textColor="@color/black"
+        android:textSize="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="170dp"
-        android:layout_height="114dp"
-        android:layout_marginTop="52dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
 
     <EditText
         android:id="@+id/txtLogPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="51dp"
+        android:layout_marginHorizontal="78dp"
+        android:layout_marginTop="33dp"
         android:ems="10"
         android:hint="@string/pass"
         android:inputType="textPassword"
         android:text=""
-        android:textSize="28dp"
+        android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtUser" />
 
     <Button
         android:id="@+id/btnIniciarSession"
-        android:onClick="login"
-        android:layout_width="281dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="23dp"
-        android:text="INICIAR SESIÓN"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        android:textColor="@color/verde_oscuro"
-        android:backgroundTint="@color/crema"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginHorizontal="78dp"
+        android:layout_marginTop="42dp"
         android:background="@drawable/border_radious"
+        android:backgroundTint="@color/white"
+        android:onClick="login"
+        android:text="INICIAR SESIÓN"
+        android:textColor="@color/Azul_marino"
+        android:textSize="22dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLogPassword" />
 
+
     <Button
-        android:id="@+id/btnIrRegister"
-        android:onClick="register"
-        android:layout_width="281dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="19dp"
+        android:id="@+id/button4"
+        android:layout_width="260dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/border_radious"
-        android:backgroundTint="@color/crema"
-        android:text="CREAR CUENTA"
-        android:textColor="@color/verde_oscuro"
-        android:textSize="24dp"
+        android:backgroundTint="@color/celeste_google"
+        android:drawableStart="@drawable/icono_google"
+        android:onClick="LoginWitGoogle"
+        android:paddingLeft="15dp"
+        android:text="Iniciar con google"
+        android:textColor="@color/white"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnIniciarSession" />
-
-    <Button
-        android:id="@+id/button4"
-        android:onClick="LoginWitGoogle"
-        android:layout_width="281dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/border_radious"
-        android:backgroundTint="@color/crema"
-
-        android:paddingLeft="10dp"
-        android:text="Iniciar session"
-        android:textColor="@color/verde_oscuro"
-        android:drawableStart="@drawable/icono_google_32px"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnIrRegister" />
 
     <ProgressBar
         android:id="@+id/progressBar_login"
@@ -126,4 +88,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.251" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="190dp"
+        android:layout_height="125dp"
+        android:layout_marginTop="104dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_azul" />
+
+    <Button
+        android:id="@+id/btnIrRegister"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="40dp"
+        android:background=""
+        android:onClick="register"
+        android:text="Crear cuenta"
+        android:textColor="@color/white"
+        android:textSize="10dp"
+        android:textStyle="bold"
+        android:textAlignment="textStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnIrForgotpassword"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:background=""
+        android:onClick="forgotpassword"
+        android:text="Olvidó contraseña"
+        android:textColor="@color/white"
+        android:textSize="10dp"
+        android:textStyle="bold"
+        android:textAlignment="textEnd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintStart_toEndOf="@+id/btnIrRegister"
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
