Nuevo diseño y las funcionalidades funcionando, falta ver recuperar password

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,10 +95,10 @@
         android:layout_width="129dp"
         android:layout_height="39dp"
         android:layout_marginTop="10dp"
-        android:background=""
+        android:background="@color/celeste"
         android:onClick="sessionClose"
         android:text="Cerrar Session"
-        android:textColor="@color/Azul_marino"
+        android:textColor="@color/white"
         android:textSize="10dp"
         android:textAlignment="textEnd"
         android:textStyle="bold"
