--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="negro">#222222</color>
     <color name="celeste_google">#4285F4</color>
     <color name="gris_oscuro">#545454</color>
+    <color name="celeste">#2196F3</color>
 </resources>
