--- a/app/src/main/res/layout/activity_pregunta_simulacro.xml
+++ b/app/src/main/res/layout/activity_pregunta_simulacro.xml
@@ -81,7 +81,7 @@
         app:layout_constraintVertical_bias="0.641" />
 
     <Button
-        android:id="@+id/btnRegistrar"
+        android:id="@+id/btnSiguiente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
@@ -156,7 +156,7 @@
         app:layout_constraintVertical_bias="0.067" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtPregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
@@ -180,7 +180,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toBottomOf="@+id/txtPregunta">
 
 
         <RadioButton
