--- a/app/src/main/res/layout/activity_frame_11.xml
+++ b/app/src/main/res/layout/activity_frame_11.xml
@@ -91,7 +91,7 @@
         app:layout_constraintVertical_bias="0.604" />
 
     <Button
-        android:id="@+id/btnRegistrar"
+        android:id="@+id/btnSiguiente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
@@ -117,14 +117,14 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtCurso_Prueba"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/materia_practica2"
         android:textColor="@color/black"
 
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/txtPregunta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +135,7 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtPregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
@@ -161,7 +161,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/txtPregunta"
         app:layout_constraintVertical_bias="0.287">
 
 
