--- a/app/src/main/res/layout/activity_frame_5.xml
+++ b/app/src/main/res/layout/activity_frame_5.xml
@@ -81,7 +81,7 @@
         app:layout_constraintVertical_bias="0.604" />
 
     <Button
-        android:id="@+id/btnRegistrar"
+        android:id="@+id/btnSiguiente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
@@ -108,7 +108,7 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtPregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
@@ -133,7 +133,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.437"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/txtPregunta"
         app:layout_constraintVertical_bias="0.287">
 
 
@@ -190,7 +190,7 @@
         android:textColor="@color/black"
 
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/txtPregunta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
