--- a/app/src/main/res/layout/activity_frame_crearcuenta.xml
+++ b/app/src/main/res/layout/activity_frame_crearcuenta.xml
@@ -136,7 +136,7 @@
             />
 
         <Button
-            android:id="@+id/btnRegistrar"
+            android:id="@+id/btnSiguiente"
             android:onClick="register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
