--- a/app/src/main/res/layout/activity_resultados_simulacion.xml
+++ b/app/src/main/res/layout/activity_resultados_simulacion.xml
@@ -63,7 +63,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnRegistrar"
+        android:id="@+id/btnSiguiente"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content"
@@ -163,7 +163,7 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtCurso_Prueba"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
