--- a/app/src/main/res/layout/activity_confirmarpractica.xml
+++ b/app/src/main/res/layout/activity_confirmarpractica.xml
@@ -97,7 +97,7 @@
 
 
         <Button
-            android:id="@+id/cplisto_btn"
+            android:id="@+id/btn_volver_intentar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="110dp"
@@ -111,13 +111,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cpatras_btn"
+            app:layout_constraintTop_toBottomOf="@+id/cpatrasBtn"
             app:layout_constraintVertical_bias="0.116"
 
             />
 
         <Button
-            android:id="@+id/cpatras_btn"
+            android:id="@+id/cpatrasBtn"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:layout_marginHorizontal="110dp"
