--- a/app/src/main/res/layout/activity_frame_10.xml
+++ b/app/src/main/res/layout/activity_frame_10.xml
@@ -125,29 +125,30 @@
             app:layout_constraintVertical_bias="0.046"
             />
 
+
+
         <Button
-            android:id="@+id/btnSiguiente"
+            android:id="@+id/btn_salir"
             android:layout_width="match_parent"
-            android:layout_marginHorizontal="20dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/border_radious"
             android:backgroundTint="#004242"
             android:paddingHorizontal="60dp"
             android:paddingVertical="15dp"
             android:text="@string/btn_salir"
             android:textColor="@color/white"
             android:textSize="25sp"
-            android:background="@drawable/border_radious"
-            android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cplisto_btn"
-            app:layout_constraintVertical_bias="0.229"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/btn_volver_intentar"
+            app:layout_constraintVertical_bias="0.229" />
 
         <Button
-            android:id="@+id/cplisto_btn"
+            android:id="@+id/btnVolverIntenta"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="20dp"
             android:layout_height="wrap_content"
@@ -163,27 +164,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cpatras_btn"
-            app:layout_constraintVertical_bias="0.116"
-            />
-
-        <Button
-            android:id="@+id/cpatras_btn"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="20dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#004242"
-            android:paddingVertical="15dp"
-            android:text="@string/btn_ver_errores"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:background="@drawable/border_radious"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="0.41"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/cpatrasBtn"
+            app:layout_constraintVertical_bias="0.116"/>
 
     </LinearLayout>
 
