--- a/app/src/main/res/layout/activity_frame_crearcuenta.xml
+++ b/app/src/main/res/layout/activity_frame_crearcuenta.xml
@@ -152,7 +152,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cplisto_btn"
+            app:layout_constraintTop_toBottomOf="@+id/btn_volver_intentar"
             app:layout_constraintVertical_bias="0.229" />
 
 
