--- a/app/src/main/res/layout/activity_resultados_simulacion.xml
+++ b/app/src/main/res/layout/activity_resultados_simulacion.xml
@@ -79,11 +79,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cplisto_btn"
+        app:layout_constraintTop_toBottomOf="@+id/btn_volver_intentar"
         app:layout_constraintVertical_bias="0.229" />
 
     <Button
-        android:id="@+id/cplisto_btn"
+        android:id="@+id/btn_volver_intentar"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content"
@@ -100,11 +100,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cpatras_btn"
+        app:layout_constraintTop_toBottomOf="@+id/cpatrasBtn"
         app:layout_constraintVertical_bias="0.116" />
 
     <Button
-        android:id="@+id/cpatras_btn"
+        android:id="@+id/cpatrasBtn"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content"
